# movie_translator

./: .envrc  .gitattributes  .gitignore  .gitmodules  Brewfile  FLAN_T5_STATUS.md  FLAN_T5_SUCCESS.md  FOUR_MODELS_SUCCESS.md  LICENSE  MULTI_MODEL_IMPLEMENTATION.md  MULTI_MODEL_SUCCESS.md  Makefile  PACKAGE_STRUCTURE.md  README.md  REFACTOR_SUMMARY.md  SETUP.md  ai_translator.py  clean_pipeline.py  conftest.py  debug_ass_to_srt.py  justfile  pyproject.toml  run.sh  setup.sh  step2_1_extract_dialogue.py  step2_2_complete_pipeline.py  step3_ai_pipeline.py  test-run.sh  test_ass_reader.py  test_input.srt  test_nllb.py  test_output.srt  translate.bash  translate.py  translate.sh
.github/workflows/: tests.yml
benchmarks/: nllb_comparison.py
benchmarks/results/: nllb_comparison_2026-04-04_1730.json  nllb_comparison_2026-04-04_1735.json  nllb_comparison_2026-04-04_1737.json
custom_model/: README.md
custom_model/docs/: design.md  translation-quality-experiments.md
custom_model/scripts/: translation_experiments.py
docs/research/: custom-translation-model-design.md
docs/superpowers/plans/: 2026-03-27-burned-in-subtitle-ocr.md  2026-03-27-burned-in-subtitle-removal.md  2026-03-27-subtitle-fetch.md  2026-03-28-subtitle-fetch-improvements.md  2026-03-28-subtitle-validation.md  2026-03-29-pipeline-refactor.md  2026-03-30-metrics-observability.md  2026-03-30-parallel-pipeline.md  2026-03-30-sentence-level-translation.md  2026-04-04-nllb-benchmark.md
docs/superpowers/specs/: 2026-03-27-burned-in-subtitle-ocr-design.md  2026-03-27-burned-in-subtitle-removal-design.md  2026-03-27-subtitle-fetch-design.md  2026-03-28-subtitle-validation-design.md  2026-03-29-pipeline-refactor-design.md  2026-03-30-apple-translation-backend-design.md  2026-03-30-metrics-observability-design.md  2026-03-30-parallel-pipeline-design.md  2026-04-03-subtitle-extraction-command-design.md
models/allegro/: config.json  generation_config.json  model.safetensors  source.spm  tokenizer_config.json  vocab.json
movie_translator/: __init__.py  ai_translation.py  async_pipeline.py  context.py  discovery.py  extract.py  ffmpeg.py  fonts.py  gpu_queue.py  logging.py  main.py  mkv_operations.py  pipeline.py  progress.py  subtitle_processor.py  subtitle_validator.py  tui_renderer.py  types.py  utils.py
movie_translator/commands/: common.py  extract_cmd.py  translate_cmd.py
movie_translator/identifier/: __init__.py  hasher.py  identify.py  metadata.py  napihash.py  parser.py  tmdb.py  types.py
movie_translator/identifier/tests/: test_hasher.py  test_identify.py  test_metadata.py  test_napihash.py  test_parser.py  test_tmdb.py
movie_translator/inpainting/: __init__.py  backends.py  inpainter.py  mask_generator.py  video_processor.py
movie_translator/inpainting/tests/: test_inpainter.py  test_mask_generator.py  test_video_processor.py
movie_translator/metrics/: __init__.py  __main__.py  collector.py  compare.py  events.py  listeners.py  report.py
movie_translator/metrics/results/: 2026-03-30_3ef0759.json  2026-03-30_60c34d2.json  2026-03-30_apple_benchmark.json
movie_translator/metrics/tests/: test_collector.py  test_compare.py  test_listeners.py  test_report.py
movie_translator/mkv/: __init__.py  operations.py
movie_translator/ocr/: __init__.py  burned_in_extractor.py  change_detector.py  frame_extractor.py  pgs_extractor.py  probe.py  processor.py  vision_ocr.py
movie_translator/ocr/tests/: test_burned_in_extractor.py  test_change_detector.py  test_pgs_extractor.py  test_probe.py  test_vision_ocr.py
movie_translator/stages/: __init__.py  create_tracks.py  extract_english.py  extract_ref.py  fetch.py  identify.py  mux.py  translate.py
movie_translator/stages/tests/: test_create_tracks.py  test_extract_english.py  test_extract_ref.py  test_fetch.py  test_identify.py  test_mux.py  test_translate.py
movie_translator/subtitle_fetch/: __init__.py  align.py  align_ilass.py  encoding.py  fetcher.py  rate_limiter.py  retry.py  scoring.py  style_classifier.py  types.py  validator.py
movie_translator/subtitle_fetch/providers/: animesub.py  base.py  napiprojekt.py  opensubtitles.py  podnapisi.py
movie_translator/subtitle_fetch/tests/: test_align.py  test_animesub.py  test_encoding.py  test_fetcher.py  test_napiprojekt.py  test_opensubtitles.py  test_podnapisi.py  test_rate_limiter.py  test_retry.py  test_scoring.py  test_style_classifier.py  test_validator.py
movie_translator/subtitles/: __init__.py  _pysubs2.py  extractor.py  parser.py  processor.py  validator.py  writer.py
movie_translator/subtitles/tests/: test_subtitles.py  test_track_selection.py
movie_translator/tests/: test_async_pipeline.py  test_discovery.py  test_ffmpeg.py  test_fonts.py  test_gpu_queue.py  test_gpu_tasks.py  test_polish_chars.py  test_progress.py  test_utils.py  test_working_dir.py
movie_translator/translation/: __init__.py  apple_backend.py  enhancements.py  model_cache.py  models.py  proper_nouns.py  sentence_merger.py  translator.py
movie_translator/translation/swift/: translate_bridge.swift
movie_translator/translation/tests/: test_apple_backend.py  test_batch_translation.py  test_enhancements.py  test_placeholders.py  (+4 more)
movie_translator/video/: __init__.py  operations.py
scripts/: benchmark_pgs_ocr.py  calibrate_validator.py  gather_subtitle_data.py
src/movie_translator/: __init__.py  apply.py  config.py  constants.py  exceptions.py  extract.py  local_llm_provider.py  main.py  process.py  translate.py  translate_batch.py  translator_adapter.py  validate_subtitles.py
src/movie_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
subtitles/: en_full.srt  spy_family_s01e01_en_subset.srt  spy_family_s01e01_en_tiny.srt  spy_family_s01e01_track0.srt
subtitles/SPY x FAMILY - S01E01_subtitles/: original_english.ass  translated_polish.srt
test_workflow/: movie_pl.srt
tests/: test_integration.py
(+5 files in other folders)
