[project]
name = "movie-translator-dependencies"
version = "0.2.0"
description = "Dependencies for Movie Translator (MacBook optimized)"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pysubs2>=1.8.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "rich>=14.2.0",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

# Ignore specific rules that are too strict for this project
ignore = [
    'E501',   # Line too long (we have some long lines for readability)
    'B008',   # Do not perform function calls in argument defaults (we do this for logging)
]

[tool.ruff.lint.isort]
# Sort imports
known-first-party = ["movie_translator"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
