[project]
name = "movie-translator"
version = "1.0.0"
description = "AI-powered subtitle translator for video files (English → Polish)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.15"
authors = [{ name = "Movie Translator Team" }]
keywords = ["subtitles", "translation", "video", "mkv", "mp4", "ai", "polish"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "pysubs2~=1.8",
    "transformers~=4.57",
    "torch~=2.7",
    "sentencepiece~=0.2",
    "rich~=14.0",
    "static-ffmpeg~=2.7",
    "fonttools>=4.61.0",
]

[project.optional-dependencies]
ocr = ["opencv-python~=4.12", "paddleocr~=3.3", "paddlepaddle~=3.2"]

[project.scripts]
movie-translator = "movie_translator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["movie_translator"]

[dependency-groups]
dev = ["ruff~=0.14", "pytest~=8.0", "ty"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["movie_translator"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests", "movie_translator"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unresolved-import = "ignore"
